# mesh-optimizer

./: .gitignore  Dockerfile  Dockerfile_cgal  Dockerfile_mmg  Dockerfile_partuv  Dockerfile_pmp  Dockerfile_v0  LICENSE  README.md  main.py
c++/cgal/: CMakeLists.txt  remesh.cpp
c++/source/: CMakeLists.txt
c++/source_cgal/: CMakeLists.txt  adaptive_remesh.cpp
c++/source_pmp/: remesh.cpp
config/: config.yaml  config_partuv.yaml
deprecated/: cleanup_geo.py  core.py  decimate.py  file_conversion.py  remesh.py  remesh_and_uv.py  remesh_cgal.py  texture_generator.py
pipeline/: core copy.py  core.py  decimate.py  io_helper.py  material_assembler.py  preprocess.py  preprocess_model.py  remesh_and_uv.py  remesher.py  roughness_gen.py  scene_helper.py  tex_baker.py  texture_generator.py  uv_generator.py  uv_packer.py
pipelines/: core.py  decimate.py  preprocess_model.py  remesh.py
pipelines_v0/: core.py
pipelines_v0/modules/: io_utils.py  preprocess.py  scene_manager.py
pipelines_v1/: core.py  decimate.py  preprocess_model.py  remesh.py  texture_generator.py  uv_generator copy.py  uv_generator.py
python/: cleanup_geo.py  decimate.py  file_conversion.py  improve_material.py  remesh.py
